--- a/ToolSheetTex.tex
+++ b/ToolSheetTex.tex
@@ -21,14 +21,14 @@
 
 
 \begin{document}
-\title{Analytical Tools from Mary S. Morgan: The World in the Model Chap.:3}
+\title{Analytical Tools from Mary S. Morgan: "The World in the Model" Chap. 3}
 \maketitle
 %Two purposes of Visualization
 %Space can be seen in two ways: conceptional versus cognitive
 \section*{Imagining versus Imaging}
 
 \section*{Perceptual versus Conceptual Space}
-A visualization can contain perceptual and conceptual elements. Perceptual elements are elements that are gained by simplification and isolation from the real world. Perceptual elements are elements like indifference curves or contract curves, which are imagined by the economist.
+A visualization can contain perceptual and conceptual elements. Perceptual elements are elements that are gained by simplification and isolation from the real world. Perceptual elements are elements like indifference curves or contract curves, which are imagined by the economist. This distinction roughly corresponds to two styles of model-building. One begins starts with the real world and tries to isolate the relevant elements. The other style starts from a small model like the choices of a single consumer and successively adds more elements.  
 \pagebreak
 
 %\printbibliography
