Adding the definition of visualization.

--- a/ToolSheetTex.tex
+++ b/ToolSheetTex.tex
@@ -27,6 +27,9 @@
 %Space can be seen in two ways: conceptional versus cognitive
 \section*{Imagining versus Imaging}
 
+\section*{Visualization}
+The process of visualization entails trying to understand how the world works and expressing that understanding in new forms. Those new forms can be mathematical or visual.
+
 \section*{Perceptual versus Conceptual Space}
 A visualization can contain perceptual and conceptual elements. Perceptual elements are elements that are gained by simplification and isolation from the real world. Perceptual elements are elements like indifference curves or contract curves, which are imagined by the economist. This distinction roughly corresponds to two styles of model-building. One begins starts with the real world and tries to isolate the relevant elements. The other style starts from a small model like the choices of a single consumer and successively adds more elements.  
 \pagebreak
