fixed margin settings

--- a/Svorencik.tex
+++ b/Svorencik.tex
@@ -1,6 +1,7 @@
 % !TEX TS-program = xelatex
 %This Latex template conforms to the class specifications of the Economic Modeling Calss.
-\documentclass[12pt,a4paper, margin = 2.5cm]{article}
+\documentclass[12pt,a4paper]{article}
+\usepackage[margin = 2.5cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{fontspec} 
 \usepackage{xunicode} 
