--- a/ToolSheetTex.tex
+++ b/ToolSheetTex.tex
@@ -1,6 +1,7 @@
 % !TEX TS-program = xelatex
 %This Latex template conforms to the class specifications of the Economic Modeling Calss.
-\documentclass[12pt,a4paper, margin = 2.5cm]{article}
+\documentclass[a4paper, 12pt]{article}
+\usepackage[margin = 2.5cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{fontspec} 
 \usepackage{xunicode} 
@@ -12,28 +13,23 @@
 \usepackage[backend=bibtex, style=authoryear, uniquename=init, firstinits=true, maxbibnames=3, minbibnames=2]{biblatex} 
 \usepackage[doublespacing]{setspace}
 \let\cite\textcite
-%Add link to bib file here
-%\bibliography{literature.bib}
-
   
 \author{Paul Sch\"afer \\\ Student ID: 1336356}
 
-
-
 \begin{document}
-\title{Analytical Tools from Mary S. Morgan: "The World in the Model" Chap. 3}
+\title{Analytical Tools from Mary S. Morgan: "The World in the Model", Chapter 3}
 \maketitle
-%Two purposes of Visualization
-%Space can be seen in two ways: conceptional versus cognitive
-\section*{Imagining versus Imaging}
+in this chapter Morgan proposes three new tools for the analysis of economic models. Modeling can be seen as a process of visualization and coming up with new concepts and as representing economic concepts in a new language. Models can be analyzed by looking at the elements of their perceptual and conceptual spaces.
 
-\section*{Visualization}
-The process of visualization entails trying to understand how the world works and expressing that understanding in new forms. Those new forms can be mathematical or visual.
+\subsection*{Visualization and Newness}
+According to Morgan's definition visualization means trying to understand how the world works and expressing that understanding in new forms. Those new forms can be mathematical or visual. The representation of that understanding is called a model. Visualization has two parts imagining the world and making an image of it. Imagining means growing a model from the bottom up by coming up with new concepts. Making an image is reducing the world to a simpler image of it that can be displayed. Model making should not be seen as Translation or Transcription but as a way of understanding the world. The new concepts economists come up with in their models are shaped by the language they use in their models. Although those concepts can later be expressed verbally something is missing from the text if you omit the model. This means that the model contributes something new.
 
-\section*{Perceptual versus Conceptual Space}
-A visualization can contain perceptual and conceptual elements. Perceptual elements are elements that are gained by simplification and isolation from the real world. Perceptual elements are elements like indifference curves or contract curves, which are imagined by the economist. This distinction roughly corresponds to two styles of model-building. One begins starts with the real world and tries to isolate the relevant elements. The other style starts from a small model like the choices of a single consumer and successively adds more elements.  
-\pagebreak
+\subsection*{Language}
+In translating a model one has to decide which mathematical language to use. Seemingly equivalent mathematical languages like supply and demand diagrams and systems of equations are not equivalent. The move from sentences to diagrams can be regarded as a bigger step than the move from sentences to algebra. Sentences express temporal or logical relations. Diagrams express local or spatial relations. 
+Economists work with mathematical models by manipulating symbols. This helps their imagination and understanding of the world. The symbols represent concepts imagined by the economists and images of the real world like allocations of wine and cheese. The mathematical languages used in a model are not defined by the names of the symbols but by the rules used to manipulate them.
+The relationships between concepts are not only determined by these mathematical rules but also by the model made by the economist. 
 
-%\printbibliography
+\subsection*{Conceptual versus Perceptual Space}
+Illustration takes part in the perceptual space of the artist. Visualization takes part in the conceptual space of the economist. The conceptual space of a model contains the concepts imagined by the economist like indifference curves or contract curves. The conceptual space is the image of the world built up by these new concepts. Once the diagram is conceived the perceptual elements help in understanding the conceptual relations of the elements and the outcomes of manipulating them. If the reasoning and the diagram both take part in the conceptual space, i.e. by manipulating economic concepts, the diagram plays a vital role in the argument If the diagram is in the perceptual space, while the reasoning is about concepts, the diagram is only an illustration of the argument and not a visualization or model.
 
 \end{document}
