adding capital letter at the beginning of the first sentence

--- a/ToolSheetTex.tex
+++ b/ToolSheetTex.tex
@@ -19,7 +19,7 @@
 \begin{document}
 \title{Analytical Tools from Mary S. Morgan: "The World in the Model", Chapter 3}
 \maketitle
-in this chapter Morgan proposes three new tools for the analysis of economic models. Modeling can be seen as a process of visualization and coming up with new concepts and as representing economic concepts in a new language. Models can be analyzed by looking at the elements of their perceptual and conceptual spaces.
+In this chapter Morgan proposes three new tools for the analysis of economic models. Modeling can be seen as a process of visualization and coming up with new concepts and as representing economic concepts in a new language. Models can be analyzed by looking at the elements of their perceptual and conceptual spaces.
 
 \subsection*{Visualization and Newness}
 According to Morgan's definition visualization means trying to understand how the world works and expressing that understanding in new forms. Those new forms can be mathematical or visual. The representation of that understanding is called a model. Visualization has two parts imagining the world and making an image of it. Imagining means growing a model from the bottom up by coming up with new concepts. Making an image is reducing the world to a simpler image of it that can be displayed. Model making should not be seen as Translation or Transcription but as a way of understanding the world. The new concepts economists come up with in their models are shaped by the language they use in their models. Although those concepts can later be expressed verbally something is missing from the text if you omit the model. This means that the model contributes something new.
