Kommentare von regina eingearbeitet

--- a/ToolSheetTex.tex
+++ b/ToolSheetTex.tex
@@ -22,14 +22,14 @@
 In this chapter Morgan proposes three new tools for the analysis of economic models. Modeling can be seen as a process of visualization and coming up with new concepts and as representing economic concepts in a new language. Models can be analyzed by looking at the elements of their perceptual and conceptual spaces.
 
 \subsection*{Visualization and Newness}
-According to Morgan's definition visualization means trying to understand how the world works and expressing that understanding in new forms. Those new forms can be mathematical or visual. \begin{comment} Das ist Tautologie: Eine Visualisierung kann visuell sein. \end{comment} The representation of that understanding is called a model. Visualization has two parts imagining the world and making an image of it. Imagining means growing a model from the bottom up by coming up with new concepts. Making an image is reducing the world to a simpler image of it that can be displayed. Model making should not be seen as Translation or Transcription but as a way of understanding the world. The new concepts economists come up with in their models are shaped by the language they use in their models. Although those concepts can later be expressed verbally, something is missing from the text if you omit the model. \begin{comment} Ich bin mir nicht sicher, ob ich diesen Satz verstanden habe. Wenn man das Modell weglässt ist auch manches vom Text weg, das das Konzept beschreibt, welches wiederum neu geschaffen wurde für das Modell? \end{comment} This means that the model contributes something new.
+According to Morgan's definition visualization means trying to understand how the world works and expressing that understanding in new forms. These new forms must not only be visual but can also be mathematical. The representation of that understanding is called a model. Visualization has two parts imagining the world and making an image of it. Imagining means growing a model from the bottom up by coming up with new concepts. Making an image is reducing the world to a simpler image of it that can be displayed. Model making should not be seen as Translation or Transcription but as a way of understanding the world. The new concepts economists come up with in their models are shaped by the language they use in their models. Although those concepts can later be expressed verbally, a crucial part of the argument is missing if you omit the model.  This means that the model contributes something new.
 
 \subsection*{Language}
-In translating a model \begin{comment} Bin mir unsicher, ob da nicht ein Komma hinkommt.\end{comment} one has to decide which mathematical language to use. Seemingly equivalent mathematical languages like supply and demand diagrams and systems of equations are not equivalent. The move from sentences to diagrams can be regarded as a bigger step than the move from sentences to algebra. Sentences express temporal or logical relations. Diagrams express local or spatial relations. 
-Economists work with mathematical models by manipulating symbols. This helps their imagination and understanding of the world. The symbols represent concepts imagined by the economists and images of the real world like allocations of wine and cheese. \begin{comment} Warum gerade Wein und Käse :-D Das Beispiel kommt für mich so aus dem Nichts, aber vielleicht ist es für Ökonomen ja DAS Paradebeispiel und ich bin einfach nur eine unwissende Soziologin.\end{comment} The mathematical languages used in a model are not defined by the names of the symbols but by the rules used to manipulate them.
-The relationships between concepts are not only determined by these mathematical rules but also by the model made by the economist. % "Ich mach mir die Welt, wie sie mir gefällt." :-D
+In translating a model, one has to decide which mathematical language to use. Seemingly equivalent mathematical languages like supply and demand diagrams and systems of equations are not equivalent. The move from sentences to diagrams can be regarded as a bigger step than the move from sentences to algebra. Sentences express temporal or logical relations. Diagrams express local or spatial relations. 
+Economists work with mathematical models by manipulating symbols. This helps their imagination and understanding of the world. The symbols represent concepts imagined by the economists and images of the real world like prices or quantities.The mathematical languages used in a model are not defined by the names of the symbols but by the rules used to manipulate them.
+The relationships between concepts are not only determined by these mathematical rules but also by the model made by the economist. 
 
 \subsection*{Conceptual versus Perceptual Space}
-Illustration takes part in the perceptual space of the artist \begin{comment} Wenn aus dem Ökonom ein Schöngeist wird.^^ \end{comment}. Visualization takes part in the conceptual space of the economist. The conceptual space of a model contains the concepts imagined by the economist like indifference curves or contract curves. The conceptual space is the image of the world built up by these new concepts. Once the diagram is conceived, the perceptual elements help in understanding the conceptual relations of the elements and the outcomes of manipulating them. If the reasoning and the diagram both take part in the conceptual space, i.e. by manipulating economic concepts, the diagram plays a vital role in the argument. If the diagram is in the perceptual space, while the reasoning is about concepts, the diagram is only an illustration of the argument and not a visualization or model.
+Illustration takes part in the perceptual space of the artist. Visualization takes part in the conceptual space of the economist. The conceptual space of a model contains the concepts imagined by the economist like indifference curves or contract curves. The conceptual space is the image of the world built up by these new concepts. Once the diagram is conceived, the perceptual elements help in understanding the conceptual relations of the elements and the outcomes of manipulating them. If the reasoning and the diagram both take part in the conceptual space, i.e. by manipulating economic concepts, the diagram plays a vital role in the argument. If the diagram is in the perceptual space, while the reasoning is about concepts, the diagram is only an illustration of the argument and not a visualization or model.
 
 \end{document}
