first version of the presentation materials

--- a/ToolSheetTex.tex
+++ b/ToolSheetTex.tex
@@ -1,4 +1,4 @@
-% !TEX TS-program = xelatex
+l% !TEX TS-program = xelatex
 %This Latex template conforms to the class specifications of the Economic Modeling Calss.
 \documentclass[a4paper, 12pt]{article}
 \usepackage[margin = 2.5cm]{geometry}
