--- a/slide.tex
+++ b/slide.tex
@@ -83,7 +83,8 @@
 %%% information about presentation %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
-\title{Title}
+\title{Main Points of: Imagining and Imaging: Creating
+a New Model World}
 \subtitle{\footnotesize{Paul Sch\"afer}}
 %\date{\tiny{\today}}
  
@@ -110,7 +111,84 @@ bg= white!10}
   \tableofcontents
 \end{frame}
 
-\section{Section}
-\subsection{Subsection}
+\section{Languages of Modeling}
+\begin{frame}{Conceptual versus Perceptual Space}
+\begin{table}
+\begin{center}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Perceptual Space }& \textbf{Conceptual Space}\\ \hline
+Artist & Economist \\ \hline
+Illustrates & Visualizes \\ \hline
+Understanding the Perceptual Space & Concepts and Manipulation\\ \hline
 
+\end{tabular}
+\end{center}
+\end{table}
+\end{frame}
+
+
+\begin{frame}{Modeling and the Use of Mathematics}
+	\begin{itemize}
+		\item Mathematical Languages:
+	  		\begin{itemize}
+	  		\item Use of symbols
+	  		\item Manipulation of symbols
+	  		\item Rules for the manipulation of symbols given by the language and the model
+	  		\end{itemize}
+	 \item Sentences Math and Diagrams
+	 	\begin{itemize}
+	 		\item Math is closer to sentences than to diagrams
+	 		\item Math and sentences express ideas in temporal or logical relations
+	 		\item Diagrams express ideas in spatial relations
+	 	\end{itemize}
+	\end{itemize}
+\end{frame}
+
+\section{Visualization}
+\begin{frame}{The Process of Visualization}
+\includegraphics[scale = 0.8]{ImagingImaginingDiagramm.pdf}	
+\end{frame}
+
+\section{Newness}
+\begin{frame}{Imagining new Concepts}
+\begin{itemize}
+\item New World with new Concepts
+\item Modeling leads to other statements about the World than verbal economics
+\item Expressing Models in verbal form needs new words for new concepts
+\item The model becomes essential to the text
+\end{itemize}
+\end{frame}
+
+
+\section{The History of the Edgeworth Box}
+\begin{frame}{Marshall's  first Trade Diagram (1879)}
+\includegraphics[scale = 0.9]{Marshall.pdf}
+\end{frame}
+
+\begin{frame}{The Original Edgeworth Box (1881)}
+\includegraphics[scale = 0.9]{EdgeworthBox.pdf}
+\end{frame}
+
+\begin{frame}{Pareto's "Optimum" Box Diagram (1906)}
+\includegraphics[scale = 0.9]{Pareto.pdf}
+\end{frame}
+
+\begin{frame}{Newness and the Edgeworth Box}
+\begin{itemize}
+\item Marshall's first trade diagram (1879)
+	\begin{itemize}
+		\item Offer curves
+	\end{itemize}
+\item The original Edgeworth box (1881) 
+	\begin{itemize}
+		\item Indifference curves
+		\item Contract curve
+	\end{itemize}
+\item Pareto's "optimum" box diagram (1906)
+	\begin{itemize}
+		\item Pareto optimality
+	\end{itemize}
+\end{itemize}
+\end{frame}
 \end{document}
