--- a/slide.tex
+++ b/slide.tex
@@ -153,9 +153,9 @@ Understanding the Perceptual Space & Concepts and Manipulation\\ \hline
 \section{Newness}
 \begin{frame}{Imagining new Concepts}
 \begin{itemize}
-\item New World with new Concepts
-\item Modeling leads to other statements about the World than verbal economics
-\item Expressing Models in verbal form needs new words for new concepts
+\item New World with new concepts
+\item Modeling leads to other statements about the world than verbal economics
+\item Expressing models in verbal form needs new words for new concepts
 \item The model becomes essential to the text
 \end{itemize}
 \end{frame}
