--- a/Conceptual Versus Perceptual Space.tex
+++ b/Conceptual Versus Perceptual Space.tex
@@ -34,14 +34,14 @@ Illustration takes part in the perceptual space of the artist. Visualization tak
 The concepts the economist imagines live in the conceptual space.  The function of the perceptual space is to illustrate these concepts and the outcomes of their manipulation.
 
 \paragraph{Modeling and the Use of Mathematics:}
-In order to create mathematical models, economists need mathematical representations of the world. In the example of Ricardo's model farm these representations are things that can be numerically measured in the real world like prices or wages. Edgeworth used abstract concepts like indifference curves, that had to be imagined before he could use them in his model (making an image of them). 
+In order to create mathematical models, economists need mathematical representations of the world. In the example of Ricardo's model farm these representations are things that can be numerically measured in the real world like prices or wages. Edgeworth used abstract concepts like indifference curves, that had to be imagined before he could use them in his model (by making an image of them). 
 Mathematical languages work by the manipulation of symbols. The rules for this manipulations are given by the model and by the mathematical language used in the model. 
 The move from sentences to diagrams can be regarded as a bigger step than the move from sentences to algebra. Sentences express temporal or logical relations. Diagrams express local or spatial relations.
 
 \paragraph{The Process of Visualization:}
 Economists try to understand the world. In that process of understanding they come up with new concepts. Visualization means that economists take their understanding about the world and give it a new from. This new form is an economic model. inside a model the new economic concepts have a symbolic representation which can be manipulated. This representation is part of the conceptual space and illustrates the economic concepts imagined by the model-builder.
 
-\paragraph{Imagining new Concepts}
+\paragraph{Imagining new Concepts:}
 In the process of model building economists come up with new concepts. Their language, which is mathematical, leads them to make new statements about the world. These statements are different from what can be achieved with verbal economics. Nevertheless they can be expressed in verbal forms. But then new names for the new concepts represented in the model are needed. If a model is new, it cannot be omitted from the text without loosing crucial information. 
 If the reasoning and the diagram both take part in the conceptual space, i.e. by manipulating economic concepts, the diagram plays a vital role in the argument If the diagram is in the perceptual space, the reasoning is "off the diagram” (Mahoney 1985).
 
@@ -49,19 +49,19 @@ If the reasoning and the diagram both take part in the conceptual space, i.e. by
 Marshall's first trade diagram is a model of international trade between Germany and England. 
 The orange curves are the offer curves, they depict the offers of German linen for English cloth and vice versa, if you change relative prices. The two axis depict the quantities of the two goods.
 
-\paragraph{The Original Edgeworth Box}
+\paragraph{The Original Edgeworth Box:}
 The Edgeworth box depicts trade between Robinson X and Freitag Y. X denotes the labor provided by X and Y denotes the renumeration given by Y. Each point in the space contained by the two axis is a contract. The orange lines are again the offer curves. The green lines are the indifference curves going through the origin. The lilac line is the contract curve.
 
 Edgeworth was the first to use an indifference curve. He built upon Jevon's who used utility maps for one good. By using an indifference curve Edgeworth has a representation for the utility over combinations of two goods. Since nobody wants to be worse of than at the origin, Edgeworth reduces the space of all possible trades to the area between the indifference curves. The contract curve represents the contracts from which it is not possible to negotiate an improvement.
 By imagining these two curves Edgeworth manages to restrict the domain of possible contracts to the points on the contract curve between the two indifference curves through the origin.
 As more and more firms enter the market the range of possible contracts converges to the intersection of the two offer curves.
 
-\paragraph{Pareto’s "Optimum" Box Diagram}
+\paragraph{Pareto’s "Optimum" Box Diagram:}
 Pareto is the first to rotate the digram and position the individuals at the edges. The dotted and solid green lines represent two sets of indifference curves for the individuals positioned at the origins $o$ and $\omega$ of the coordinate systems. The black line represents the price-ray.
 Pareto sees the indifferences curves as contour lines of a utility mountain both agents want to climb up. If the indifference curves are tangent to each other, no agent can climb higher up his mountain without descending the other agent's mountain. This state is called Pareto optimal. If the agents cannot influence the prices, the price-ray is tangent to each indifference curve. Therefore the equilibrium is Pareto optimal
 
 
-\paragraph{Newness and the Edgeworth Box}
+\paragraph{Newness and the Edgeworth Box:}
 Edgeworth took Marshall's offer curves from the international trade setting and transferred them to a setting where two individuals trade. His main innovation was to use indifference curves to map concepts from utility space into commodity space and restrict the range of possible contracts using those concepts.
 Pareto transforms the Edgeworth Box into a real box and pioneers the concept of Pareto Optimality.
 Leontief later puts all those new concepts into the same diagram.
